syntax = "proto3";

option go_package = "echopb";

package echo;

import "google/protobuf/timestamp.proto";

message EchoMessage {
	google.protobuf.Timestamp time = 1;
	uint32 id = 2;
	string data = 3;
}

message EchoRequest {
	google.protobuf.Timestamp time = 1;
	EchoMessage data = 2;
}

message EchoResponse {
	google.protobuf.Timestamp time = 1;
	uint32 code = 2;
	string status = 3;
	string result = 4;
}

service EchoService {
	// Unary
	rpc Echo(EchoRequest) returns (EchoResponse) {};
}
